# juce-spectroscope19-ci

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
Source/: CMakeLists.txt  ExampleWidget.cpp  ExampleWidget.h  Main.cpp  MainComponent.cpp  MainComponent.h
